welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: illegal start of simple expression
(var vuBiscuit:Boolean = false);
 ^Program:14: error: ')' expected but '}' found.
}
^